Create Product - UI

--- a/Areas/Admin/Views/Products/Create.cshtml
+++ b/Areas/Admin/Views/Products/Create.cshtml
@@ -10,6 +10,8 @@
 @section Scripts {
     <script src="~/admin/js/plugins/select2/js/select2.full.min.js"></script>
     <script src="~/admin/js/plugins/ckeditor/ckeditor.js"></script>
+    <script src="~/admin/js/plugins/jquery-validation/jquery.validate.min.js"></script>
+    <script src="~/admin/js/plugins/jquery-validation/additional-methods.js"></script>
     <script src="~/admin/js/upload-image.js"></script>
 
     <!-- Page JS Helpers (Select2 + Bootstrap Maxlength + CKEditor plugins) -->
@@ -17,6 +19,7 @@
 }
 
 <!-- Page Content -->
+<form id="product-form" method="POST" onsubmit="return false;">
 <div class="content">
     <div class="row">
         <div class="col-8">
@@ -26,7 +29,6 @@
                     <h3 class="block-title">Add product</h3>
                 </div>
                 <div class="block-content">
-                    <form action="be_pages_ecom_product_edit.html" method="POST" onsubmit="return false;">
                         <div class="mb-4">
                             <label class="form-label" for="product-name">Name</label>
                             <input type="text" class="form-control" id="product-name" name="product-name">
@@ -41,7 +43,6 @@
                             <label class="form-label">Description</label>
                             <textarea id="js-ckeditor" name="product-description"></textarea>
                         </div>
-                    </form>
                 </div>
             </div>
             <!-- END Info -->
@@ -70,60 +71,76 @@
                 </div>
             </div>
             <!-- END Variant-->
+            <!-- Variant -->
+            <div class="block block-rounded table-variant-container" style="display: none">
+                <div class="block-content block-content-full">
+                    <table class="table align-middle">
+                        <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Variants</th>
+                                <th scope="col">Stock</th>
+                                <th scope="col">Status</th>
+                            </tr>
+                        </thead>
+                        <tbody id="table-variant">
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!-- END Variant-->
         </div>
         <div class="col-4">
             <!-- Meta Data -->
             <div class="block block-rounded">
                 <div class="block-content">
-                    <form action="be_pages_ecom_product_edit.html" method="POST" onsubmit="return false;">
-                        <div class="d-flex justify-content-between align-items-center mb-4">
-                            <label class="form-label">Active</label>
-                            <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" value="" id="product-status" name="product-status">
-                                <label class="form-check-label" for="product-status"></label>
-                            </div>
+                    <div class="d-flex justify-content-between align-items-center mb-4">
+                        <label class="form-label">Active</label>
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" value="" id="product-status" name="product-status">
+                            <label class="form-check-label" for="product-status"></label>
                         </div>
-                        <div class="mb-4">
-                            <label class="form-label" for="product-slug">Slug</label>
-                            <input type="text" class="form-control" id="product-slug" name="product-slug">
-                        </div>
-                        <div class="mb-4">
-                            <label class="form-label" for="brand-id">Brand</label>
-                            <select class="js-select2 form-select" id="brand-id" name="brand-id" style="width: 100%;" data-placeholder="Choose brand..">
-                                <option></option>
-                                @foreach (var brand in ViewBag.Brands)
-                                {
-                                    <option value="@brand.Id">@brand.Name</option>
-                                }
-                            </select>
-                        </div>
-                        <div class="mb-4">
-                            <label class="form-label" for="category-id">Category</label>
-                            <select class="js-select2 form-select" id="category-id" name="category-id" style="width: 100%;" data-placeholder="Choose category..">
-                                <option></option>
-                                @foreach (var brand in ViewBag.Categories)
-                                {
-                                    <option value="@brand.Id">@brand.Name</option>
-                                }
-                            </select>
-                        </div>
-                        <div class="mb-4">
-                            <button type="submit" class="btn btn-primary btn-hero" id="btn-save-product">Save</button>
-                        </div>
-                    </form>
+                    </div>
+                    <div class="mb-4">
+                        <label class="form-label" for="product-slug">Slug</label>
+                        <input type="text" class="form-control" id="product-slug" name="product-slug">
+                    </div>
+                    <div class="mb-4">
+                        <label class="form-label" for="brand-id">Brand</label>
+                        <select class="js-select2 form-select" id="brand-id" name="brand-id" style="width: 100%;" data-placeholder="Choose brand..">
+                            <option></option>
+                            @foreach (var brand in ViewBag.Brands)
+                            {
+                                <option value="@brand.Id">@brand.Name</option>
+                            }
+                        </select>
+                    </div>
+                    <div class="mb-4">
+                        <label class="form-label" for="category-id">Category</label>
+                        <select class="js-select2 form-select" id="category-id" name="category-id" style="width: 100%;" data-placeholder="Choose category..">
+                            <option></option>
+                            @foreach (var brand in ViewBag.Categories)
+                            {
+                                <option value="@brand.Id">@brand.Name</option>
+                            }
+                        </select>
+                    </div>
+                    <div class="mb-4">
+                        <button type="submit" class="btn btn-primary btn-hero" id="btn-save-product">Save</button>
+                    </div>
                 </div>
             </div>
-            <!-- END Meta Data -->
-            
+            <!-- END Meta Data --> 
         </div>
     </div>
 </div>
+</form>
 <!-- Modal -->
 <div class="modal" id="modal-variant" tabindex="-1" role="dialog" aria-labelledby="modal-variant" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-scrollable" role="document">
         <div class="modal-content">
             <div class="model-header block-header block-header-default">
-                <h3 class="block-title">Select2 in a modal</h3>
+                <h3 class="block-title">Variant</h3>
                 <div class="block-options">
                     <button type="button" class="btn-block-option" data-bs-dismiss="modal" aria-label="Close">
                         <i class="fa fa-fw fa-times"></i>
@@ -132,7 +149,7 @@
             </div>
             <div class="modal-body block block-rounded block-transparent mb-0">
                 <div class="block-content">
-                    <form action="be_forms_plugins.html" method="POST" onsubmit="return false;">
+                    <form id="form-variant" onsubmit="return false;">
                         <div class="mb-4">
                             <label class="form-label" for="color-id">Color</label>
                             <select class="js-select2 form-select" id="color-id" name="color-id" style="width: 100%;" data-container="#modal-variant" data-placeholder="Choose one..">
@@ -145,7 +162,7 @@
                         </div>
                         <div class="mb-4">
                             <label class="form-label" for="size-id">Size</label>
-                            <select class="js-select2 form-select" id="size-id" name="size-id" style="width: 100%;" data-placeholder="Choose many.." data-container="#modal-variant" disabled multiple>
+                            <select class="js-select2 form-select" id="size-id" name="size-id" style="width: 100%;" data-placeholder="Choose many.." data-container="#modal-variant" multiple>
                                 <option></option>
                                 @foreach (var size in ViewBag.Sizes)
                                 {
@@ -164,26 +181,14 @@
                                 </div>
                             </div>
                         </div>
-                        <table class="table table-variant-container align-middle" style="display: none">
-                            <thead>
-                                <tr>
-                                    <th scope="col">#</th>
-                                    <th scope="col">Variants</th>
-                                    <th scope="col">Stock</th>
-                                    <th scope="col">Status</th>
-                                </tr>
-                            </thead>
-                            <tbody id="table-variant">
-                            </tbody>
-                        </table>
                     </form>
                 </div>
 
             </div>
             <div class="model-footer block-content block-content-full text-end bg-body">
                 <button type="button" class="btn btn-sm btn-alt-secondary me-1" data-bs-dismiss="modal">Close</button>
-                <button type="button" id="btn-add-variant" class="btn btn-sm btn-primary" data-bs-dismiss="modal">Save</button>
-                <button type="button" id="btn-update-variant" class="btn btn-sm btn-primary" data-bs-dismiss="modal" style="display: none">Update</button>
+                <button type="button" id="btn-add-variant" class="btn btn-sm btn-primary">Save</button>
+                <button type="button" id="btn-update-variant" class="btn btn-sm btn-primary" data-bs-dismiss="modal" data-index="0" style="display: none">Update</button>
             </div>
         </div>
     </div>
