update customer and addCard detail product

--- a/wwwroot/css/custom.css
+++ b/wwwroot/css/custom.css
@@ -1,4 +1,4 @@
-/*============================================================================================*/
+﻿/*============================================================================================*/
 /* Your custom styles below */
 /*============================================================================================*/
 .field-validation-error {
@@ -17,4 +17,8 @@
 .input-validation-error:focus {
     border-color: #e04f1a;
     box-shadow: 0 0 0 0.25rem rgba(224, 79, 26, 0.25);
+}
+
+.custom-notify {
+    z-index: 9999; /* Điều chỉnh giá trị z-index theo nhu cầu của bạn, để đảm bảo nó cao hơn modal */
 }
