--- a/Views/Product/Detail.cshtml
+++ b/Views/Product/Detail.cshtml
@@ -286,7 +286,7 @@
 	                    <span class="ribbon new">New</span>
 	                    <figure>
 	                        <a href="product-detail-1.html">
-	                            <img class="owl-lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/5.jpg" alt="">
+	                            <img class="owl-lazy" src="~/img/products/product_placeholder_square_medium.jpg" data-src="~/img/products/shoes/5.jpg" alt="">
 	                        </a>
 	                    </figure>
 	                    <div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
@@ -310,7 +310,7 @@
 	                    <span class="ribbon hot">Hot</span>
 	                    <figure>
 	                        <a href="product-detail-1.html">
-	                            <img class="owl-lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/8.jpg" alt="">
+	                            <img class="owl-lazy" src="~/img/products/product_placeholder_square_medium.jpg" data-src="~/img/products/shoes/8.jpg" alt="">
 	                        </a>
 	                    </figure>
 	                    <div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
@@ -334,7 +334,7 @@
 	                    <span class="ribbon off">-30%</span>
 	                    <figure>
 	                        <a href="product-detail-1.html">
-	                            <img class="owl-lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/2.jpg" alt="">
+	                            <img class="owl-lazy" src="~/img/products/product_placeholder_square_medium.jpg" data-src="~/img/products/shoes/2.jpg" alt="">
 	                        </a>
 	                    </figure>
 	                    <div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
@@ -359,7 +359,7 @@
 	                    <span class="ribbon off">-50%</span>
 	                    <figure>
 	                        <a href="product-detail-1.html">
-	                            <img class="owl-lazy" src="img/products/product_placeholder_square_medium.jpg" data-src="img/products/shoes/3.jpg" alt="">
+	                            <img class="owl-lazy" src="~/img/products/product_placeholder_square_medium.jpg" data-src="~/img/products/shoes/3.jpg" alt="">
 	                        </a>
 	                    </figure>
 	                    <div class="rating"><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star voted"></i><i class="icon-star"></i></div>
@@ -420,3 +420,75 @@
 		<!--/feat-->
 
 	</main>
+
+	<div class="top_panel">
+		<div class="container header_panel">
+			<a href="#0" class="btn_close_top_panel"><i class="ti-close"></i></a>
+			<label>1 product added to cart</label>
+		</div>
+		<!-- /header_panel -->
+		<div class="item">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-7">
+						<div class="item_panel">
+							<figure>
+								<img src="~/img/products/shoes/1.jpg" class="lazy" alt="">
+							</figure>
+							<h4>1x Armor Air X Fear</h4>
+							<div class="price_panel"><span class="new_price">$148.00</span><span class="percentage">-20%</span> <span class="old_price">$160.00</span></div>
+						</div>
+					</div>
+					<div class="col-md-5 btn_panel">
+						<a href="cart.html" class="btn_1 outline">View cart</a> <a href="checkout.html" class="btn_1">Checkout</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- /item -->
+		<div class="container related">
+			<h4>Who bought this product also bought</h4>
+			<div class="row">
+				<div class="col-md-4">
+					<div class="item_panel">
+						<a href="#0">
+							<figure>
+								<img src="~/img/products/shoes/2.jpg" alt="">
+							</figure>
+						</a>
+						<a href="#0">
+							<h5>Armor Okwahn II</h5>
+						</a>
+						<div class="price_panel"><span class="new_price">$90.00</span></div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="item_panel">
+						<a href="#0">
+							<figure>
+								<img src="~/img/products/shoes/3.jpg" alt="">
+							</figure>
+						</a>
+						<a href="#0">
+							<h5>Armor Air Wildwood ACG</h5>
+						</a>
+						<div class="price_panel"><span class="new_price">$75.00</span><span class="percentage">-20%</span> <span class="old_price">$155.00</span></div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="item_panel">
+						<a href="#0">
+							<figure>
+								<img src="~/img/products/shoes/4.jpg" alt="">
+							</figure>
+						</a>
+						<a href="#0">
+							<h5>Armor ACG React Terra</h5>
+						</a>
+						<div class="price_panel"><span class="new_price">$110.00</span></div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- /related -->
+	</div>
