--- a/Areas/Admin/Views/Products/Create.cshtml
+++ b/Areas/Admin/Views/Products/Create.cshtml
@@ -97,7 +97,7 @@
                     <div class="d-flex justify-content-between align-items-center mb-4">
                         <label class="form-label">Active</label>
                         <div class="form-check form-switch">
-                            <input class="form-check-input" type="checkbox" value="" id="product-status" name="product-status">
+                            <input class="form-check-input" type="checkbox" value="" id="product-status" name="product-status" checked>
                             <label class="form-check-label" for="product-status"></label>
                         </div>
                     </div>
